--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
     <script src='/app.js'></script>
     <style type="text/css" media="all">
       body { margin-top: 30px; }
+      .templates { display: none; }
     </style>
   </head>
   <body>
@@ -28,6 +29,11 @@
               <img src='/images/HeroImage.jpg' />
             </div>
           </div>
+        </div>
+      </div>
+      <div class='templates'>
+        <div class='problem-view'>
+          <h3 class='title'></h3>
         </div>
       </div>
     </div>
