--- a/public/index.html
+++ b/public/index.html
@@ -21,21 +21,46 @@
       body { margin-top: 30px; }
       .templates { display: none; }
       .fixed-width-text { font-family: "Consolas","Courier New",monospace }
+      .no-select {
+        user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;
+        -moz-user-select: none;
+      }
+      .nav-container {
+        padding-left: 40px;
+        height: 25px;
+        background: #666;
+        width: 100%;
+      }
+      .nav-container a { color: white; }
+      .fixed-top {
+        position: fixed;
+        top: 0px;
+        z-index: 1024;
+      }
+      .inline-list li {
+        display: inline;
+        margin: 0 20px 0 0;
+      }
+      .hover-links a { text-decoration: none; }
+      .hover-links a:hover { text-decoration: underline; }
     </style>
     </style>
   </head>
   <body>
     <div class='markup'>
-      <div class='nav-container no-select fixed-top u-full-width'>
-        <ul class='inline-list hover-links nav-list six columns'>
-          <li>><a class='text-lg' href='#'>LearnJS</a></li>
-          <li>><a href='#problem-1'>Start</a></li>
+      <div class='nav-container no-select fixed-top'>
+        <ul class='inline-list hover-links'>
+          <li><a href="#">LearnJS</a></li>
+          <li><a href="#problem-1">Start</a></li>
         </ul>
       </div>
       <div class='view-container container'>
       </div>
       <div class='templates'>
         <div class='landing-view'>
+        <!-- Markup Continues... -->
           <div class='row'>
             <div class='one-half column'>
               <h3>Learn JavaScript, one puzzle at a time.</h3>
@@ -46,6 +71,7 @@
             </div>
           </div>
         </div>
+
         <div class='problem-view'>
           <h3 class='title'></h3>
           <p data-name='description'></p>
