--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
           <li><a class='text-lg' href="#">LearnJS</a></li>
           <li><a href="#problem-1">Start</a></li>
         </ul>
-        <div class='four columns'>
+        <div class='four columns signin-bar'>
           <span class='navbar-padding u-pull-right'>
             <span class="g-signin2" data-onsuccess="googleSignIn"></span>
           </span>
@@ -100,6 +100,13 @@
               <p class='result'></p>
             </div>
           </form>
+        </div>
+        <div class='profile-view'>
+          <h3>Your Profile</h3>
+          <div class='email'></div>
+        </div>
+        <div class='profile-link navbar-padding-lg'>
+          <a href='#profile'></a>
         </div>
 
         <li class='skip-btn'>
